style: 💄 change input placeholder color

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -386,6 +386,10 @@
     &.align-center {
       text-align: center;
     }
+
+    &::placeholder {
+      color: #e3e6e7;
+    }
   }
 
   input[type='text'] {
