fix: 🐛 <Text/> focus on unexistent input

--- a/packages/components/Input/Text.html
+++ b/packages/components/Input/Text.html
@@ -245,7 +245,7 @@
       },
       focus() {
         /* istanbul ignore next */
-        this.refs.visibleInput.focus();
+        this.refs.keyboardInput.focus();
       },
     },
   };
