--- a/packages/components/Input/Text.html
+++ b/packages/components/Input/Text.html
@@ -170,7 +170,10 @@
         });
       },
       closeKeyboard() {
-        this.refs.keyboardInput.blur();
+        /** check if the element is still rendered */
+        if (this.refs.keyboardInput) {
+          this.refs.keyboardInput.blur();
+        }
 
         this.set({ active: false });
         this.root.meta.setScrollable(true);
