--- a/packages/components/Input/Text.html
+++ b/packages/components/Input/Text.html
@@ -38,9 +38,7 @@
       </div>
       <div class="key-row">
         <div class="key bigger" on:click="toggleCapitalize()">
-          <div class="utility-key capslock"
-            style={capslockStyle}>
-            </div>
+          <div class="utility-key capslock"></div>
         </div>
         {#each layout.thirdRowKeys as key}
           <div class="key" on:click="insertKey(key)">{key}</div>
