docs: ✏️ add money input props

--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -70,7 +70,7 @@
 
   <h4>Input de dinheiro</h4>
   <div class="row">
-    <MoneyInput label="DINHEIRO" on:submit="console.log(event)"/>
+    <MoneyInput cents="100" label="DINHEIRO" on:submit="console.log(event)" />
   </div>
 </div>
 
