--- a/packages/pos/simulator/view/pos/panels/Merchant.html
+++ b/packages/pos/simulator/view/pos/panels/Merchant.html
@@ -34,8 +34,16 @@
     <input type="text" bind:value="state" maxlength="30" />
   </li>
   <li class="controller is-full">
-    <span>MCC</span>
-    <input type="text" bind:value="taxationIdentificationNumber" maxlength="10" />
+    <span>CNPJ/CPF</span>
+    <input type="text" bind:value="taxationIdentificationType" maxlength="4" />
+  </li>
+  <li class="controller is-full">
+    <span>CPF/CNPJ</span>
+    <input
+      type="text"
+      bind:value="taxationIdentificationNumber"
+      maxlength="16"
+    />
   </li>
 </ul>
 
@@ -53,6 +61,7 @@
     'street',
     'number',
     'displayName',
+    'taxationIdentificationType',
     'taxationIdentificationNumber',
   ];
 
@@ -69,6 +78,7 @@
         street,
         number,
         displayName,
+        taxationIdentificationType,
         taxationIdentificationNumber,
       } = Registry.persistent.get().$Merchant;
 
@@ -83,6 +93,7 @@
         street,
         number,
         displayName,
+        taxationIdentificationType,
         taxationIdentificationNumber,
       };
     },
