--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -25,6 +25,7 @@
       return {
         _location: undefined,
         _isNavigationEnabled: { back: false, home: true },
+        _navigableRoute: { routeBack: undefined , paramsBack: undefined },
         title: undefined,
         textColor: '#425963',
         bgColor: '#f2f2f2',
@@ -73,6 +74,9 @@
           if (changed.navigable) {
             this.set({ _isNavigationEnabled: current.navigable });
           }
+          if (changed.navigableRoute) {
+            this.set({ _navigableRoute: current.navigableRoute });
+          }
         });
       }
     },
@@ -103,8 +107,18 @@
         }
       },
       _goBack() {
+        const { _navigableRoute } = this.get();
         /* istanbul ignore else */
-        if (this.root.router) {
+        if (_navigableRoute.routeBack) {
+          if (_navigableRoute.paramsBack) {
+            this.root.router.go(
+              _navigableRoute.routeBack,
+              _navigableRoute.paramsBack,
+            );
+          } else {
+            this.root.router.go(_navigableRoute.routeBack);
+          }
+        } else if (this.root.router) {
           this.root.fire('appbar:goBack');
           this.root.router.back();
         }
