Removed unusiful code about back button.

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -163,10 +163,8 @@
           }
         }
       },
-      resetRouteParams() {
-        this.set({ navigableRoute: {
-          routeBack: undefined, paramsBack: undefined },
-        });
+      resetRoute() {
+        this.set({ navigableRoute: { routeBack: undefined } });
       },
       askAdminPassword() {
         this.refs.adminLock.open();
