feat: 🎸 New feature add AppBar back icon override method | this.root.meta.setNavigableRoute (#445)
* Created the methods  setNavigableRoute and resetRouteParams to set especific route when clicked on the back button.

* Removed unusiful code about back button.

* Removed unusiful code about back button.

* Updated documentation for add new method.

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -35,6 +35,7 @@
     data() {
       return {
         navigable: { home: true, back: true },
+        navigableRoute: { routeBack: undefined , paramsBack: undefined },
         shortcuts: true,
         scrollable: true,
         hasAppbar: false,
@@ -151,6 +152,19 @@
             },
           });
         }
+      },
+      setNavigableRoute(route, params = {}) {
+        if (route && typeof route === 'string') {
+          if (params && typeof params === 'object') {
+            this.set({ navigableRoute: {
+              routeBack: route, paramsBack: params } });
+          } else {
+            this.set({ navigableRoute: { routeBack: route } });
+          }
+        }
+      },
+      resetRoute() {
+        this.set({ navigableRoute: { routeBack: undefined } });
       },
       askAdminPassword() {
         this.refs.adminLock.open();
