style: 💄 New color variables for Radio component

--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -41,6 +41,10 @@ $switch-checked-color: $green;
 $switch-disabled-bg: $silver-light;
 $switch-disabled-color: $silver;
 
+$radio-checked-border: $green;
+$radio-checked-color: $green;
+$radio-unchecked-border: $gray;
+
 /* Tabs component */
 $tab-navigation-bg: #f2f2f2;
 $tab-label-color: #65777f;
