--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -76,6 +76,9 @@
           } else if (changed.navigableRoute) {
             this.set({ _navigableRoute: current.navigableRoute });
           }
+          if (changed.navigableRoute) {
+            this.set({ _navigableRoute: current.navigableRoute });
+          }
         });
       }
     },
